--- a/style.css
+++ b/style.css
@@ -1,3 +1,17 @@
+* {
+    font-family: 'Kanit', 'sans-serif';
+}
+
 body {
-    background-color: #f2fff8ce !important;
+    background-color: #ffffff !important;
+}
+
+.col p {
+    color: #9e9e9e;
+    font-size: 100;
+}
+
+nav .container-fluid {
+    padding-left: 125px;
+    padding-right: 125px;
 }
